
2003-06-22  Saito <timidity@flashmail.com>

	* nouse, timw32g, timw32gd, twsyng, cfgforsf, ...:
	  Remove VC++ project files.
	* configs/VC++6.00ProjectFiles.zip:
	  Add VC++6.00ProjectFiles.zip.

2003-06-21  Saito <timidity@flashmail.com>

	* nouse, timw32g, timw32gd, twsyng, cfgforsf, ...:
	  Add VC++ project files to be able to compile Win32GUI interface.
	  Fix VC++ project files.
	* timidity/sndfont.c:
	  Fix for cfgforsf.

2003-06-17  s_keishi <s_keishi@mutt.freemail.ne.jp>

	* interface/winsyn_c.c: To work under PortAudio
	* interface/Makefile.am (EXTRA_DIST): Add entry for escape_sjis.pl
	* interface/escape_sjis.pl: Add
	* timidity/portaudio_a.c : Bug fix

2003-06-16  Saito <timidity@flashmail.com>

	* timidity/readmidi.c, timidity/reverb.c, timidity/timidity.c:
	  Fix lowpass filters of system effects.
	  Fix reverb-time calculation for new reverberation effect.
	  Remove overlapping initialize_gauss_table().

2003-06-15  mput<root@mput.dip.jp>

	* configure.in, timidity/Makefile.am: Fix a bit to merge
	  s_keishi's patch

2003-06-14  s_keishi <s_keishi@mutt.freemail.ne.jp>

	* configure.in: Fix to fit with the addition
	* timidity/timidity.c, timidity/output.c: Fix to fit with the
	  addition
	* timidity/Makefile.am (EXTRA_timidity_SOURCES): Fix to fit with
	  the addition
	* timidity/portaudio_a.c: Add.

2003-06-14  s_keishi <s_keishi@mutt.freemail.ne.jp>

	* timidity/timidity.c:
	  Fix noise with gauss interpolation at synthesizer modes.

2003-06-13  s_keishi <s_keishi@mutt.freemail.ne.jp>

	* configure.in, interface.h.in,
	  timidity/Makefile.am, timidity/timidity.c:
	  Fix configures to be able to compile twsyng with gcc.

2003-06-13  Saito <timidity@flashmail.com>

	* timidity/playmidi.c, timidity/readmidi.c,
	timidity/reverb.[ch], timidity/tables.c:
	  Fix insertion effect.
	  Fix illegal-parameter handling of delay effect.
	  Strengthen delay and chorus effect.
	  Support for reverb / chorus / delay LPF in correct method.
